[package]
name = "wave-proto"
version = "0.0.2"
edition = "2024"
authors = ["geno <nullfree.geno@gmail.com>"]
license = "BSD-3-Clause"
description = "Minimal UDP wrapper that transparently handles encryption and connection handling"
repository = "https://github.com/genonullfree/wave-proto"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.102"
async-net = "2.0.0"
async-std = "1.13.2"
k256 = { version = "0.13.4", features = ["ecdh"] }
rand = "0.10.0"
